[package]
name = "dsi-progress-logger"
version = "0.4.0"
edition = "2021"
description = "A tunable time-based progress logger to log progress information about long-running activities"
repository = "https://github.com/vigna/dsi-progress-logger-rs/"
license = "Apache-2.0 OR LGPL-2.1-or-later"
keywords = ["log", "progress"]
categories = ["development-tools::debugging"]
authors = [
	"Tommaso Fontana <tommaso.fontana.96@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]

[dependencies]
log = "0.4.17"
num-format = "0.4.4"
pluralizer = "0.5.0"
sysinfo = "0.33.1"

[dev-dependencies]
env_logger = "0.11.6"
rayon = "1.10.0"
